Including group_uid foreing kek to iot_data.thingData table
